--- a/crypto2025/biblio.bib
+++ b/crypto2025/biblio.bib
@@ -356,6 +356,76 @@
   biburl       = {https://dblp.org/rec/conf/icisc/FujiokaTTY18.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
+@misc{cryptoeprint:2021/168,
+      author = {Xiaohan Zhang and Chi Cheng and Ruoyu Ding},
+      title = {Small Leaks Sink a Great Ship: An Evaluation of Key Reuse Resilience of {PQC} Third Round Finalist {NTRU}-{HRSS}},
+      howpublished = {Cryptology {ePrint} Archive, Paper 2021/168},
+      year = {2021},
+      url = {https://eprint.iacr.org/2021/168}
+}
+
+@misc{cryptoeprint:2019/1022,
+      author = {Jintai Ding and Joshua Deaton and Kurt Schmidt and Vishakha and Zheng Zhang},
+      title = {A Simple and Efficient Key Reuse Attack on {NTRU} Cryptosystem},
+      howpublished = {Cryptology {ePrint} Archive, Paper 2019/1022},
+      year = {2019},
+      url = {https://eprint.iacr.org/2019/1022}
+}
+
+
+@inproceedings{DBLP:conf/crypto/JaulmesJ00,
+  author       = {{\'{E}}liane Jaulmes and
+                  Antoine Joux},
+  editor       = {Mihir Bellare},
+  title        = {A Chosen-Ciphertext Attack against {NTRU}},
+  booktitle    = {Advances in Cryptology - {CRYPTO} 2000, 20th Annual International
+                  Cryptology Conference, Santa Barbara, California, USA, August 20-24,
+                  2000, Proceedings},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {1880},
+  pages        = {20--35},
+  publisher    = {Springer},
+  year         = {2000},
+  url          = {https://doi.org/10.1007/3-540-44598-6\_2},
+  doi          = {10.1007/3-540-44598-6\_2},
+  timestamp    = {Tue, 14 May 2019 10:00:48 +0200},
+  biburl       = {https://dblp.org/rec/conf/crypto/JaulmesJ00.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@techreport{Hoffstein1999,
+  author       = {Jeffrey Hoffstein and Joseph H. Silverman},
+  title        = {Reaction attacks against the {NTRU} public key cryptosystem},
+  institution  = {NTRU Technical Report},
+  year         = {1999},
+  url          = {https://ntru.org/resources.shtml},
+  note         = {Available at \url{https://ntru.org/resources.shtml}}
+}
+
+@inproceedings{DBLP:conf/crypto/00010N20,
+  author       = {Qian Guo and
+                  Thomas Johansson and
+                  Alexander Nilsson},
+  editor       = {Daniele Micciancio and
+                  Thomas Ristenpart},
+  title        = {A Key-Recovery Timing Attack on Post-quantum Primitives Using the
+                  Fujisaki-Okamoto Transformation and Its Application on FrodoKEM},
+  booktitle    = {Advances in Cryptology - {CRYPTO} 2020 - 40th Annual International
+                  Cryptology Conference, {CRYPTO} 2020, Santa Barbara, CA, USA, August
+                  17-21, 2020, Proceedings, Part {II}},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {12171},
+  pages        = {359--386},
+  publisher    = {Springer},
+  year         = {2020},
+  url          = {https://doi.org/10.1007/978-3-030-56880-1\_13},
+  doi          = {10.1007/978-3-030-56880-1\_13},
+  timestamp    = {Sun, 12 Nov 2023 02:15:30 +0100},
+  biburl       = {https://dblp.org/rec/conf/crypto/00010N20.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
 
 
 @article{aragon2022bike,
@@ -984,21 +1054,25 @@
 }
 
 
-@article{ravi2019generic,
+@article{DBLP:journals/tches/RaviRCB20,
   author       = {Prasanna Ravi and
                   Sujoy Sinha Roy and
                   Anupam Chattopadhyay and
                   Shivam Bhasin},
   title        = {Generic Side-channel attacks on CCA-secure lattice-based {PKE} and
-                  {KEM} schemes},
-  journal      = {{IACR} Cryptol. ePrint Arch.},
-  pages        = {948},
-  year         = {2019},
-  url          = {https://eprint.iacr.org/2019/948},
-  timestamp    = {Mon, 11 May 2020 15:58:11 +0200},
-  biburl       = {https://dblp.org/rec/journals/iacr/RaviRCB19.bib},
+                  KEMs},
+  journal      = {{IACR} Trans. Cryptogr. Hardw. Embed. Syst.},
+  volume       = {2020},
+  number       = {3},
+  pages        = {307--335},
+  year         = {2020},
+  url          = {https://doi.org/10.13154/tches.v2020.i3.307-335},
+  doi          = {10.13154/TCHES.V2020.I3.307-335},
+  timestamp    = {Thu, 02 Jul 2020 16:41:27 +0200},
+  biburl       = {https://dblp.org/rec/journals/tches/RaviRCB20.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
+
 
 @article{DBLP:journals/tches/UenoXTITH22,
   author       = {Rei Ueno and
@@ -1152,6 +1226,53 @@
   biburl       = {https://dblp.org/rec/conf/eurocrypt/BaetuDHTV19.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
+
+
+@inproceedings{DBLP:conf/icics/HallGS99,
+  author       = {Chris Hall and
+                  Ian Goldberg and
+                  Bruce Schneier},
+  editor       = {Vijay Varadharajan and
+                  Yi Mu},
+  title        = {Reaction Attacks against several Public-Key Cryptosystems},
+  booktitle    = {Information and Communication Security, Second International Conference,
+                  ICICS'99, Sydney, Australia, November 9-11, 1999, Proceedings},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {1726},
+  pages        = {2--12},
+  publisher    = {Springer},
+  year         = {1999},
+  url          = {https://doi.org/10.1007/978-3-540-47942-0\_2},
+  doi          = {10.1007/978-3-540-47942-0\_2},
+  timestamp    = {Tue, 14 May 2019 10:00:37 +0200},
+  biburl       = {https://dblp.org/rec/conf/icics/HallGS99.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@inproceedings{DBLP:conf/asiacrypt/Guo0S16,
+  author       = {Qian Guo and
+                  Thomas Johansson and
+                  Paul Stankovski},
+  editor       = {Jung Hee Cheon and
+                  Tsuyoshi Takagi},
+  title        = {A Key Recovery Attack on {MDPC} with {CCA} Security Using Decoding
+                  Errors},
+  booktitle    = {Advances in Cryptology - {ASIACRYPT} 2016 - 22nd International Conference
+                  on the Theory and Application of Cryptology and Information Security,
+                  Hanoi, Vietnam, December 4-8, 2016, Proceedings, Part {I}},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {10031},
+  pages        = {789--815},
+  year         = {2016},
+  url          = {https://doi.org/10.1007/978-3-662-53887-6\_29},
+  doi          = {10.1007/978-3-662-53887-6\_29},
+  timestamp    = {Sun, 12 Nov 2023 02:15:36 +0100},
+  biburl       = {https://dblp.org/rec/conf/asiacrypt/Guo0S16.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
 
 @inproceedings{DBLP:conf/acns/Huguenin-Dumittan20,
   author       = {Lo{\"{\i}}s Huguenin{-}Dumittan and
