dictionary attack and forgery attack

--- a/crypto2025/biblio.bib
+++ b/crypto2025/biblio.bib
@@ -1250,6 +1250,36 @@
 }
 
 
+@inproceedings{DBLP:conf/ctrsa/HaleviR04,
+  author       = {Shai Halevi and
+                  Phillip Rogaway},
+  editor       = {Tatsuaki Okamoto},
+  title        = {A Parallelizable Enciphering Mode},
+  booktitle    = {Topics in Cryptology - {CT-RSA} 2004, The Cryptographers' Track at
+                  the {RSA} Conference 2004, San Francisco, CA, USA, February 23-27,
+                  2004, Proceedings},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {2964},
+  pages        = {292--304},
+  publisher    = {Springer},
+  year         = {2004},
+  url          = {https://doi.org/10.1007/978-3-540-24660-2\_23},
+  doi          = {10.1007/978-3-540-24660-2\_23},
+  timestamp    = {Tue, 14 May 2019 10:00:52 +0200},
+  biburl       = {https://dblp.org/rec/conf/ctrsa/HaleviR04.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@misc{cryptoeprint:2021/912,
+      author = {Daniel J.  Bernstein},
+      title = {{FO} derandomization sometimes damages security},
+      howpublished = {Cryptology {ePrint} Archive, Paper 2021/912},
+      year = {2021},
+      url = {https://eprint.iacr.org/2021/912}
+}
+
+
 @inproceedings{DBLP:conf/asiacrypt/Guo0S16,
   author       = {Qian Guo and
                   Thomas Johansson and
